--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h4>St. Paul University Surigao</h4>
                 <p><i>July 2017 - July 2021 | January 2023 - Present</i></p>
                 <ul class="w3-ul" style="font-weight: 500;">
-                  <li> ⦿ Designate as Software Developer</li>
+                  <li> ⦿ Designated as Software Developer</li>
                   <li> ⦿ Support and Assist in all ICT related events</li>
                 </ul>
               </div>
@@ -129,7 +129,7 @@
                 <h4>Department of Information and Communications Technology</h4>
                 <p><i>August 2021 - December 2022 </i></p>
                 <ul class="w3-ul" style="font-weight: 500;">
-                  <li> ⦿ Designate as Planning Officer</li>
+                  <li> ⦿ Designated as Planning Officer</li>
                   <li> ⦿ Provides technical support for the creation and hosting of all LGU websites in the CARAGA Region.</li>
                   <li> ⦿ Cybersafe Learning for Education</li>
                   <li> ⦿ Administrative Works</li>
