--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">MY CONTACT DETAILS</h3>
             <div class="w3-margin-top-2" style="font-weight: 500;">
               <p>Name: <strong>Arnold A. Magalona</strong></p>
-              <p>Adress:<strong> Malimono, Surigao del Norte</strong></p>
+              <p>Address:<strong> Malimono, Surigao del Norte</strong></p>
               <p>Phone number: <strong>+639478895495</strong></p>
               <p>E-mail: <strong>arnoldmagalona007@gmail.com</strong></p>
             </div>
