--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 <p><i>July 2017 - July 2021 | January 2023 - Present</i></p>
                 <ul class="w3-ul" style="font-weight: 500;">
                   <li> ⦿ Designated as Software Developer</li>
+                  <li> ⦿ Graphics Design</li>
                   <li> ⦿ Support and Assist in all ICT related events</li>
                 </ul>
               </div>
@@ -133,6 +134,7 @@
                   <li> ⦿ Provides technical support for the creation and hosting of all LGU websites in the CARAGA Region.</li>
                   <li> ⦿ Cybersafe Learning for Education</li>
                   <li> ⦿ Administrative Works</li>
+                  <li> ⦿ Graphics Design</li>
                 </ul>
               </div>
             </div>
