--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
 
             <!--REFERENCE SECTION-->
-            <div class="w3-container w3-margin-top-2 w3-cursive">
+            <!--div class="w3-container w3-margin-top-2 w3-cursive">
               <h3 class="w3-border-amber">MY REFERENCES</h3>
               <h4>Engr. Roland P. Taganahan</h4>
               <ul class="w3-ul" style="font-weight: 500;">
@@ -233,7 +233,7 @@
                 <li>venzsolutions.mystrikingly.com</li>
               </ul>
             </div>            
-          </div>
+          </div-->
 
           <!--CONTACT SECTION-->
           <div id="contact" class="w3-container w3-margin-top-20-percent w3-cursive">
